# RP2350_ILI9486

./: CMakeLists.txt  ili9486_16_pararrel.cc  ili9486_16_pararrel.hpp  ili9486_gram_write.pio  ili9486_gram_write_16bit_color.pio  rp2350_ili9486.c  rp2350_ili9486.cc  rp2350_ili9486.h  rp2350_ili9486.hpp  rp2350_ili9486_gram_write.pio
